@@ -6,12 +6,16 @@
 \title{Install and uninstall support for .Renviron.d and .Rprofile.d startup
 directories}
 \usage{
-install(path = "~", backup = TRUE, debug = FALSE)
+install(path = "~", append = TRUE, backup = TRUE, debug = FALSE)
 
 uninstall(path = "~", backup = TRUE, debug = FALSE)
 }
 \arguments{
 \item{path}{The path where to create / update the \file{.Rprofile} file.}
+
+\item{append}{If \code{TRUE}, the injected startup code is appended to
+an existing R startup file, if it already exists.  If \code{FALSE}, an
+existing R startup file is overwritten.}
 
 \item{backup}{If \code{TRUE}, a timestamped backup copy of the original
 file is created before modifying it, otherwise not.}
@@ -28,7 +32,7 @@ startup directories by appending / removing one line of code to the
 }
 \section{Functions}{
 \itemize{
-\item \code{install}: Appends a \code{try(startup::startup())} call to the
+\item \code{install}: injects a \code{try(startup::startup())} call to the
 \file{.Rprofile}.
 
 \item \code{uninstall}: Remove calls to \code{startup::startup()} and similar.
